[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/wandIcon.png" type="Texture" id=1]
[ext_resource path="res://assets/sounds/potion_pickup.wav" type="AudioStream" id=2]
[ext_resource path="res://Staff.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="Animation" id=3]
resource_name = "Collect"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -11 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hover"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}

[node name="Staff" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Area2D" type="Area2D" parent="Sprite"]
scale = Vector2( 12.5, 12.5 )
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Collect = SubResource( 3 )
anims/Hover = SubResource( 2 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -12.0

[node name="CollectTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="CollectTimer" to="." method="_on_CollectTimer_timeout"]
